<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f5f5f5"
    tools:context="com.example.mt.orderweed.signup_login_tabs">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/tab_background_height"
        android:id="@+id/topPanel"
        android:background="@mipmap/tabs_background">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_centerInParent="true"
           >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:id="@+id/logo_txt_order"
                android:textSize="@dimen/logo_txt_size"
                android:text="@string/order"
                android:layout_gravity="center_horizontal"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:id="@+id/logo_txt_weed"
                android:textSize="@dimen/logo_txt_size"
                android:text="@string/weed"
                android:layout_gravity="center_horizontal"/>
        </LinearLayout>

    </RelativeLayout>



    <android.support.design.widget.TabLayout
        android:id="@+id/tabs"
        android:layout_below="@id/topPanel"
        android:layout_width="match_parent"
        android:background="@color/white"
        android:layout_height="wrap_content">


        <android.support.design.widget.TabItem
            android:id="@+id/tabItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab_text_1" />

        <android.support.design.widget.TabItem
            android:id="@+id/tabItem2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab_text_2" />


    </android.support.design.widget.TabLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/container"
        android:layout_below="@id/tabs"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

</RelativeLayout>

