<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:background="@android:color/transparent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="95dp"
        android:background="@drawable/dialog_background"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:id="@+id/dialog_header"
                android:textColor="@color/colorPrimary"
                android:text="@string/cannot_bookmark_dialog_header"/>
        </RelativeLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#acacac"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_gravity="center_horizontal"
            android:textSize="20sp"
            android:textColor="@color/textColorPrimaryDark"
            android:text="@string/cannot_rate_dialog_body_header"/>

        <TextView
            android:layout_marginBottom="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#8e8e8e"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:gravity="center_horizontal"
            android:layout_gravity="center_horizontal"
            android:textSize="13sp"
            android:text="@string/continue_without_signup_dialog_body"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:id="@+id/cancel_action"
                android:background="@drawable/dialog_red_btn_background"
                android:layout_height="match_parent">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:layout_centerInParent="true"
                    android:textSize="17sp"
                    android:id="@+id/cancel_txt"
                    android:text="@string/cannot_bookmark_dialog_cancel"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:id="@+id/continue_action"
                android:background="@drawable/dialog_green_btn_background"
                android:layout_height="match_parent">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:layout_centerInParent="true"
                    android:id="@+id/continue_txt"
                    android:textSize="17sp"
                    android:text="@string/cannot_bookmark_dialog_login"/>
            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/dialog_leaf" />
</RelativeLayout>