<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f5f5f5"
    tools:context="com.example.mt.orderweed.Reset_password">

    <include layout="@layout/toolbar"
        android:id="@+id/toolbar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="26dp"
        android:layout_below="@id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginRight="16dp"
                android:src="@drawable/padlock"
                android:layout_gravity="center_vertical"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/screen_guide"
                android:layout_gravity="center_vertical"
                android:text="@string/enter_pass"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/edit_txt_height"
            android:background="#e8e8e8"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/pass_hint"
                android:paddingStart="16dp"
                android:textSize="@dimen/edit_txt_font_size"
                android:id="@+id/pass"
                android:paddingEnd="16dp"
                android:inputType="textPassword"
                android:background="@null"
                android:backgroundTint="@android:color/transparent"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/edit_txt_height"
            android:background="#e8e8e8"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/confirm_pass_hint"
                android:paddingStart="16dp"
                android:textSize="@dimen/edit_txt_font_size"
                android:id="@+id/confirm_pass"
                android:paddingEnd="16dp"
                android:inputType="textPassword"
                android:background="@null"
                android:backgroundTint="@android:color/transparent"/>
        </LinearLayout>
        <android.support.v7.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="@dimen/btn_height"
            android:id="@+id/reset_pass_btn"
            android:textSize="@dimen/edit_txt_font_size"
            android:theme="@style/AppTheme.RaisedButtonPrimary"
            android:textAllCaps="false"
            android:layout_marginLeft="11dp"
            android:layout_marginRight="11dp"
            android:layout_alignParentBottom="true"
            android:text="@string/reset_password_screen_header"
            android:layout_marginTop="20dp"
            >
        </android.support.v7.widget.AppCompatButton>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/email_error"
            android:textSize="@dimen/edit_txt_font_size"
            android:layout_marginTop="15dp"
            android:textColor="@color/colorAccent"
            android:visibility="gone"
            android:text="@string/password_error"
            android:layout_gravity="center_horizontal"/>

    </LinearLayout>
</RelativeLayout>
