<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:layout_marginTop="16dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/edit_txt_height"
                android:background="#e8e8e8"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="10dp">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/name_hint"
                    android:background="@null"
                    android:paddingStart="16dp"
                    android:textSize="@dimen/edit_txt_font_size"
                    android:id="@+id/name"
                    android:paddingEnd="16dp"
                    android:backgroundTint="@android:color/transparent"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/edit_txt_height"
                android:background="#e8e8e8"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/mail_hint"
                    android:background="@null"
                    android:paddingStart="16dp"
                    android:textSize="@dimen/edit_txt_font_size"
                    android:id="@+id/mail"
                    android:paddingEnd="16dp"
                    android:backgroundTint="@android:color/transparent"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/edit_txt_height"
                android:background="#e8e8e8"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="10dp">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/pass_hint"
                    android:textSize="@dimen/edit_txt_font_size"
                    android:paddingStart="16dp"
                    android:background="@null"
                    android:inputType="textPassword"
                    android:paddingEnd="16dp"
                    android:id="@+id/pass"
                    android:textAlignment="viewStart"
                    android:textDirection="rtl"
                    android:backgroundTint="@android:color/transparent"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/edit_txt_height"
                android:background="#e8e8e8"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/confirm_pass_hint"
                    android:paddingStart="16dp"
                    android:inputType="textPassword"
                    android:paddingEnd="16dp"
                    android:background="@null"
                    android:textSize="@dimen/edit_txt_font_size"
                    android:id="@+id/confirm_pass"
                    android:textDirection="rtl"
                    android:textAlignment="viewStart"
                    android:backgroundTint="@android:color/transparent"/>
            </LinearLayout>

            <android.support.v7.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="@dimen/btn_height"
                android:id="@+id/signup_btn"
                android:textSize="@dimen/edit_txt_font_size"
                android:theme="@style/AppTheme.RaisedButtonPrimary"
                android:textAllCaps="false"
                android:layout_marginLeft="11dp"
                android:layout_marginRight="11dp"
                android:layout_alignParentBottom="true"
                android:text="@string/tab_text_1"
                android:layout_marginTop="10dp"
                >
            </android.support.v7.widget.AppCompatButton>

            <android.support.v7.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="@dimen/btn_height"
                android:id="@+id/skip_btn"
                android:textSize="@dimen/edit_txt_font_size"
                android:theme="@style/AppTheme.RaisedButtonAccent"
                android:textAllCaps="false"
                android:layout_marginLeft="11dp"
                android:layout_marginRight="11dp"
                android:layout_alignParentBottom="true"
                android:text="@string/skip"
                android:layout_marginTop="5dp">
            </android.support.v7.widget.AppCompatButton>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>