<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <include layout="@layout/toolbar"
        android:id="@+id/toolbar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp">
                <TextView
                    android:layout_alignParentStart="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/product_name"
                    android:textSize="25sp"
                    android:textColor="@color/logo_gray"
                    android:text="Devils Thumb"/>
            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/company_name"
                android:layout_marginLeft="17dp"
                android:layout_marginRight="16dp"
                android:text="Aurora Cannabis Inc."/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_rate_header"
                android:textSize="18sp"
                android:layout_marginLeft="15dp"
                android:id="@+id/my_rate_header"
                android:layout_marginTop="26dp"
                android:textColor="@color/sub_header_color"/>

            <RatingBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:progressTint="@color/rate_color"
                android:backgroundTint="@color/rate_color"
               />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="26dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/my_review_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/my_review_header"
                    android:textColor="@color/sub_header_color"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/review"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15sp"
                    android:background="@drawable/review_edit_text_container"
                    android:gravity="top|left"
                    android:minLines="7"
                    android:padding="10dp"
                    android:textSize="15sp" />

            </LinearLayout>
            <android.support.v7.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="@dimen/btn_height"
                android:id="@+id/review_btn"
                android:textSize="@dimen/edit_txt_font_size"
                android:theme="@style/AppTheme.RaisedButtonPrimary"
                android:textAllCaps="false"
                android:layout_marginLeft="11dp"
                android:layout_marginRight="11dp"
                android:layout_alignParentBottom="true"
                android:text="@string/submit_btn"
                android:layout_marginTop="20dp">
            </android.support.v7.widget.AppCompatButton>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>